--- a/src/style/css-style/style.css
+++ b/src/style/css-style/style.css
@@ -634,6 +634,7 @@ img {
 .categorybox {
     position: relative;
     width: 268px;
+    height: 268px;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -641,7 +642,7 @@ img {
 .categorybox img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 50%;
     /* Adjust border-radius as needed */
 }
